# mathimation

./: .gitignore  nuxt.config.ts  package.json  pnpm-lock.yaml
pages/: index.vue
wasm/: Cargo.toml
wasm/src/: app.rs  lib.rs  state.rs
wasm/src/shaders/: triangle.wgsl
